--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 }
 .box-shadow {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 3px 4px -3px rgba(0, 0, 0, 0.8);
-  background-color: whitesmoke;
+  background-color: #f5f5f5;
   border-radius: 3px;
 }
 html {
@@ -21,7 +21,7 @@ body {
   margin: 0;
   font-family: "Arial", sans-serif;
   font-size: 14px;
-  color: #555555;
+  color: #555;
   background-image: url(../images/cream_dust.png);
   height: 100%;
 }
@@ -63,10 +63,10 @@ body p {
   line-height: 1.6em;
 }
 body a {
-  color: #10b2e8;
+  color: #10B2E8;
 }
 body a:visited {
-  color: #196c88;
+  color: #196C88;
 }
 body ol {
   font-weight: bold;
@@ -95,7 +95,7 @@ body .width518 {
   text-align: center;
   padding: 5%;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 3px 4px -3px rgba(0, 0, 0, 0.8);
-  background-color: whitesmoke;
+  background-color: #f5f5f5;
   border-radius: 3px;
 }
 body .width518 img {
@@ -119,7 +119,7 @@ body .width600 {
   margin: 0 auto;
   padding: 4%;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 3px 4px -3px rgba(0, 0, 0, 0.8);
-  background-color: whitesmoke;
+  background-color: #f5f5f5;
   border-radius: 3px;
 }
 body .width600 img {
@@ -130,7 +130,7 @@ body .width900 {
   text-align: center;
   margin: 0 auto 40px;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 3px 4px -3px rgba(0, 0, 0, 0.8);
-  background-color: whitesmoke;
+  background-color: #f5f5f5;
   border-radius: 3px;
   padding: 4%;
 }
@@ -139,7 +139,7 @@ body .width900 img {
 }
 body div#fancy_div {
   background-color: white;
-  color: #555555;
+  color: #555;
 }
 body form#feedback-form {
   padding: 20px;
@@ -163,18 +163,18 @@ body form#feedback-form fieldset textarea {
   padding: 0 1px;
 }
 body form#feedback-form .required {
-  color: #f37272;
+  color: #F37272;
   font-size: .8em;
   font-weight: normal;
   font-style: italic;
 }
 body form#feedback-form .error {
-  color: #f37272;
-  border: 2px solid #f37272;
+  color: #F37272;
+  border: 2px solid #F37272;
 }
 body form#feedback-form .error-text {
   display: block;
-  background-color: #f37272;
+  background-color: #F37272;
   color: white;
   width: 69%;
   padding: 7px 0 7px 10px;
@@ -186,18 +186,18 @@ body form#feedback-form .button {
   border: none;
   color: white;
   font-size: 1.4em;
-  text-shadow: 0 1px 1px #555555;
-  box-shadow: 0 2px 6px -3px #555555;
+  text-shadow: 0 1px 1px #555;
+  box-shadow: 0 2px 6px -3px #555;
 }
 body form#feedback-form .ok-send {
-  color: #1e9c1e;
+  color: #1E9C1E;
   font-size: 1.6em;
   margin: 20px auto;
   width: 76%;
   font-weight: bold;
 }
 body form#feedback-form .error-send {
-  color: #ec2020;
+  color: #EC2020;
   margin: 20px auto;
   width: 85%;
   font-weight: bold;
@@ -205,7 +205,7 @@ body form#feedback-form .error-send {
   line-height: 1.8em;
 }
 body form#feedback-form .verify-pic {
-  border: 1px solid #cccccc;
+  border: 1px solid #ccc;
   vertical-align: middle;
 }
 body form#feedback-form .verify-pic + input {
@@ -224,7 +224,7 @@ body form#feedback-form .verify-pic + input {
   visibility: hidden;
 }
 .rimsky_numeric {
-  border: 2px solid #555555;
+  border: 2px solid #555;
   border-radius: 50%;
   font-size: 1.5em;
   vertical-align: middle;
@@ -244,7 +244,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffc477', endColorstr='#fb9f27', GradientType=0);
   /* IE6-9 */
-
 }
 .orange-background-invert {
   background: #fb9f27;
@@ -257,7 +256,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fb9f27', endColorstr='#ffc477', GradientType=0);
   /* IE6-9 */
-
 }
 .orange-background-active {
   background: #fb9f27;
@@ -270,7 +268,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fb9f27', endColorstr='#ffc477', GradientType=0);
   /* IE6-9 */
-
 }
 .green-background {
   background: #97d33a;
@@ -283,7 +280,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#97d33a', endColorstr='#78a909', GradientType=0);
   /* IE6-9 */
-
 }
 .green-background-active {
   background: #78a909;
@@ -296,7 +292,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#78a909', endColorstr='#97d33a', GradientType=0);
   /* IE6-9 */
-
 }
 .button {
   margin: 3px 0 10px;
@@ -313,7 +308,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffc477', endColorstr='#fb9f27', GradientType=0);
   /* IE6-9 */
-
 }
 .button a {
   padding: 7px 20px;
@@ -335,7 +329,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fb9f27', endColorstr='#ffc477', GradientType=0);
   /* IE6-9 */
-
 }
 .main-wrapper {
   max-width: 1280px;
@@ -349,7 +342,7 @@ body form#feedback-form .verify-pic + input {
   vertical-align: top;
   text-align: center;
   width: 49%;
-  color: #666666;
+  color: #666;
 }
 .main-wrapper .width50 a {
   display: block;
@@ -357,7 +350,7 @@ body form#feedback-form .verify-pic + input {
   overflow: hidden;
 }
 .main-wrapper .width50 a img {
-  box-shadow: 0 1px 9px -2px #999999;
+  box-shadow: 0 1px 9px -2px #999;
 }
 .main-wrapper .width50 .fancy-text {
   font-size: 1.2em;
@@ -376,7 +369,7 @@ body form#feedback-form .verify-pic + input {
   vertical-align: top;
   text-align: center;
   width: 49%;
-  color: #666666;
+  color: #666;
   width: 32%;
 }
 .main-wrapper .width33 a {
@@ -385,7 +378,7 @@ body form#feedback-form .verify-pic + input {
   overflow: hidden;
 }
 .main-wrapper .width33 a img {
-  box-shadow: 0 1px 9px -2px #999999;
+  box-shadow: 0 1px 9px -2px #999;
 }
 .main-wrapper .width33 .fancy-text {
   font-size: 1.2em;
@@ -426,11 +419,10 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffc477', endColorstr='#fb9f27', GradientType=0);
   /* IE6-9 */
-
   color: white;
   text-decoration: none;
   font-weight: bold;
-  text-shadow: 0 1px 0px #999999;
+  text-shadow: 0 1px 0px #999;
   padding: 8px 20px;
   display: block;
   z-index: 18;
@@ -447,7 +439,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fb9f27', endColorstr='#ffc477', GradientType=0);
   /* IE6-9 */
-
 }
 .main-wrapper .top-menu-wrapper .top-menu-content ul li:active {
   border-top: 1px solid #e0a119;
@@ -473,7 +464,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffc477', endColorstr='#fb9f27', GradientType=0);
   /* IE6-9 */
-
   margin-top: 5%;
 }
 .main-wrapper .top-menu-wrapper .top-menu-content ul li .sub-menu:before {
@@ -529,7 +519,7 @@ body form#feedback-form .verify-pic + input {
   display: inline-block;
 }
 .main-wrapper .header-wrapper .header-content .block.right .proezd {
-  color: #10b2e8;
+  color: #10B2E8;
   vertical-align: middle;
   display: inline-block;
   width: 70%;
@@ -576,16 +566,15 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#97d33a', endColorstr='#78a909', GradientType=0);
   /* IE6-9 */
-
   margin: 4px 0;
   border-radius: 4px;
-  border: 1px solid #87b71a;
+  border: 1px solid #87B71A;
 }
 .main-wrapper .main-menu-wrapper .main-menu-content ul li a {
   color: white;
   text-decoration: none;
   font-weight: bold;
-  text-shadow: 0 1px 0px #999999;
+  text-shadow: 0 1px 0px #999;
   padding: 8px 20px;
   display: block;
 }
@@ -600,7 +589,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#78a909', endColorstr='#97d33a', GradientType=0);
   /* IE6-9 */
-
 }
 .main-wrapper .main-content-wrapper {
   padding-bottom: 98px;
@@ -610,7 +598,7 @@ body form#feedback-form .verify-pic + input {
   width: 20%;
 }
 .main-wrapper .main-content-wrapper .main-content-left .header-text {
-  color: #10b2e8;
+  color: #10B2E8;
   font-weight: bold;
   font-size: 1.2em;
   padding: 0 20px;
@@ -626,7 +614,7 @@ body form#feedback-form .verify-pic + input {
   margin: 5px 0;
   border-radius: 5px;
   text-align: center;
-  text-shadow: 0 1px 0px white;
+  text-shadow: 0 1px 0px #fff;
   background: #fcfcfc;
   /* Old browsers */
   background: -moz-linear-gradient(top, #fcfcfc 0%, #e6e6e6 100%);
@@ -637,11 +625,10 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfcfc', endColorstr='#e6e6e6', GradientType=0);
   /* IE6-9 */
-
 }
 .main-wrapper .main-content-wrapper .main-content-left ul li a {
   text-decoration: none;
-  color: #555555;
+  color: #555;
   font-weight: bold;
   padding: 10px 20px;
   display: block;
@@ -657,7 +644,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e6e6e6', endColorstr='#fcfcfc', GradientType=0);
   /* IE6-9 */
-
 }
 .main-wrapper .main-content-wrapper .main-content-center {
   float: left;
@@ -681,7 +667,7 @@ body form#feedback-form .verify-pic + input {
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.06);
   cursor: pointer;
-  color: #666666;
+  color: #666;
   display: none;
   z-index: 10;
 }
@@ -725,14 +711,13 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#97d33a', endColorstr='#78a909', GradientType=0);
   /* IE6-9 */
-
   color: white;
   cursor: pointer;
   padding: 10px 20px;
   width: 60%;
   text-align: center;
   border-radius: 5px;
-  border: 1px solid #87b71a;
+  border: 1px solid #87B71A;
 }
 .main-wrapper .main-content-wrapper .main-content-center #montaj .sovet-button img {
   vertical-align: middle;
@@ -749,7 +734,6 @@ body form#feedback-form .verify-pic + input {
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#78a909', endColorstr='#97d33a', GradientType=0);
   /* IE6-9 */
-
 }
 .main-wrapper .main-content-wrapper .main-content-center #konstruktsiya h2 {
   font-size: 1.6em;
@@ -758,12 +742,12 @@ body form#feedback-form .verify-pic + input {
 .main-wrapper .main-content-wrapper .main-content-center #konstruktsiya h3 {
   font-size: 1.2em;
   margin: 40px 0 0px;
-  color: #10b2e8;
+  color: #10B2E8;
 }
 .main-wrapper .main-content-wrapper .main-content-center #konstruktsiya h3.revert {
   margin: 0 0 60px;
   text-align: center;
-  color: #333333;
+  color: #333;
 }
 .main-wrapper .main-content-wrapper .main-content-center #posmotret .posmotret {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 3px 4px -3px;
@@ -793,8 +777,8 @@ body form#feedback-form .verify-pic + input {
   margin: 0 30px 0 300px;
 }
 .main-wrapper .main-content-wrapper .main-content-center #posmotret .posmotret .ya-maps {
-  color: #10b2e8;
-  border-bottom: 1px dashed #10b2e8;
+  color: #10B2E8;
+  border-bottom: 1px dashed #10B2E8;
   cursor: help;
 }
 .main-wrapper .main-content-wrapper .main-content-center #posmotret .posmotret .ya-maps .show {
@@ -909,7 +893,7 @@ body form#feedback-form .verify-pic + input {
 }
 .main-wrapper .main-content-wrapper .main-content-center #uslugi #sverlovka span {
   padding: 2px 9px;
-  border: 2px solid #555555;
+  border: 2px solid #555;
   border-radius: 50%;
   font-size: 1.5em;
   vertical-align: middle;
@@ -925,7 +909,7 @@ body form#feedback-form .verify-pic + input {
 }
 .main-wrapper .main-content-wrapper .main-content-center #uslugi #plazma span {
   padding: 2px 16px;
-  border: 2px solid #555555;
+  border: 2px solid #555;
   border-radius: 50%;
   font-size: 1.5em;
   vertical-align: middle;
@@ -1018,7 +1002,7 @@ body form#feedback-form .verify-pic + input {
 .main-wrapper .main-content-wrapper .main-content #price table th,
 .main-wrapper .main-content-wrapper .main-content #shtory table td,
 .main-wrapper .main-content-wrapper .main-content #price table td {
-  border: 1px solid #cccccc;
+  border: 1px solid #ccc;
   text-align: center;
   padding: 7px 0;
   font-size: 1.2em;
@@ -1028,13 +1012,13 @@ body form#feedback-form .verify-pic + input {
   font-weight: bold;
   font-size: 1.2em;
   padding: 10px 0;
-  background-color: #777777;
+  background-color: #777;
   color: white;
-  text-shadow: 0 1px 1px black;
+  text-shadow: 0 1px 1px #000;
 }
 .main-wrapper .main-content-wrapper .main-content #shtory table tbody:hover tr,
 .main-wrapper .main-content-wrapper .main-content #price table tbody:hover tr {
-  background-color: transparent !important;
+  background-color: rgba(0, 0, 0, 0) !important;
 }
 .main-wrapper .main-content-wrapper .main-content #shtory table tbody:hover tr.firm,
 .main-wrapper .main-content-wrapper .main-content #price table tbody:hover tr.firm {
@@ -1057,7 +1041,7 @@ body form#feedback-form .verify-pic + input {
 .main-wrapper .main-content-wrapper .main-content #price table tbody tr.firm td {
   font-weight: bold;
   padding: 10px 0;
-  text-shadow: 0 1px 1px white;
+  text-shadow: 0 1px 1px #ffffff;
 }
 .main-wrapper .main-content-wrapper .main-content #price h3 {
   margin: 50px 0 20px;
@@ -1112,6 +1096,7 @@ body form#feedback-form .verify-pic + input {
 .main-wrapper .main-content-wrapper .main-content #contacts #YaMap {
   width: 100%;
   height: 600px;
+  margin-bottom: 40px;
 }
 .main-wrapper .main-content-wrapper .main-content .infoBlock {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 3px 4px -3px;
@@ -1132,7 +1117,7 @@ body form#feedback-form .verify-pic + input {
 }
 .main-wrapper .footer-wrapper {
   font-size: .9em;
-  background-color: #ffb34c;
+  background-color: #FFB34C;
   width: 100%;
   position: absolute;
   left: 0;
@@ -1160,7 +1145,7 @@ body form#feedback-form .verify-pic + input {
   line-height: 1.3em;
 }
 .main-wrapper .footer-wrapper .footer-content .block.right a {
-  color: #1b8aaf;
+  color: #1B8AAF;
   text-decoration: none;
 }
 .main-wrapper .footer-wrapper .footer-content .block.right a:hover {
