--- a/css/main.less
+++ b/css/main.less
@@ -30,7 +30,7 @@ body {
 	height: 100%;	//footer down
 
 	h1, h2, h3, h4, h5, h6 {
-		text-transform: uppercase;
+		// text-transform: uppercase;
 	}
 	h1 {
 		// font-size: 2em;
@@ -211,6 +211,10 @@ body {
 			font-size: 2.8em;
 			width: 25%;
 			vertical-align: middle;
+		}
+		#refresh-captcha {
+			border-bottom: 1px dotted black;
+			cursor: pointer;
 		}
 
 	}
@@ -542,7 +546,7 @@ body {
 						a {
 							text-decoration: none;
 							color: #555;
-							font-weight: bold;
+							// font-weight: bold;
 							padding: 10px 20px;
 							display: block;
 						}
@@ -552,6 +556,16 @@ body {
 							background: -webkit-linear-gradient(top,  #e6e6e6 0%,#fcfcfc 100%); /* Chrome10-25,Safari5.1-6 */
 							background: linear-gradient(to bottom,  #e6e6e6 0%,#fcfcfc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 							filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6e6e6', endColorstr='#fcfcfc',GradientType=0 ); /* IE6-9 */
+						}
+						&.active {
+							background: #b5f793; /* Old browsers */
+							background: -moz-linear-gradient(top,  #b5f793 0%, #fcfcfc 100%); /* FF3.6-15 */
+							background: -webkit-linear-gradient(top,  #b5f793 0%,#fcfcfc 100%); /* Chrome10-25,Safari5.1-6 */
+							background: linear-gradient(to bottom,  #b5f793 0%,#fcfcfc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+							filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5f793', endColorstr='#fcfcfc',GradientType=0 ); /* IE6-9 */
+							a {
+								font-weight: bold;
+							}
 						}
 					}
 				}
